--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tcp-port-used",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "description": "A simple Node.js module to check if a TCP port is already bound.",
     "main": "index.js",
     "scripts": {
@@ -25,6 +25,7 @@
     },
     "homepage": "https://github.com/jut-io/tcp-port-used",
     "dependencies": {
+        "debug": "0.7.4",
         "is2": "0.0.9",
         "q": "0.9.7"
     },
