.jshintrc needed to relax maxlen and latedef

--- a/.jshintrc
+++ b/.jshintrc
@@ -10,11 +10,10 @@
     "forin"         : false,
     "immed"         : false,
     "indent"        : 4,
-    "latedef"       : true,
+    "latedef"       : false,
     "laxcomma"      : true,
     "maxcomplexity" : 39,
     "maxdepth"      : 5,
-    "maxlen"        : 110,
     "maxparams"     : 7,
     "maxstatements" : 100,
     "multistr"      : true,
