--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     },
     "homepage": "https://github.com/jut-io/tcp-port-used",
     "dependencies": {
-        "debug": "^3.1.0",
-        "is2": "0.0.9"
+        "debug": "3.1.0",
+        "is2": "2.0.1"
     },
     "devDependencies": {
         "mocha": "1.15.0"
